# animalese

./: .prettierrc  license.md  package.json  readme.md  svelte.config.js  vite.config.js
.github/workflows/: publish.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keyboard.rs  lib.rs  main.rs
src/components/header/: Button.svelte  Header.svelte
src/components/keyboard/: Key.svelte  Keyboard.svelte
src/consts/: keyboard.ts
src/routes/: +layout.svelte  +page.svelte
src/styles/: app.css  theme.css
